# ForMyBrothers

./: CMakeLists.txt
include/: main.h
src/: main  main.cpp  main.h
tmp/: bti.py  image.txt  itb.py
